--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -3,12 +3,17 @@
 <html>
 <head>
     <title>Fair Play</title>
+    <link rel='stylesheet' href='@routes.Assets.at("lib/bootstrap/css/bootstrap.min.css")'>
     <link rel="stylesheet" media="screen" href='@routes.Assets.at("stylesheets/main.css")'>
     <link rel="shortcut icon" type="image/png" href='@routes.Assets.at("images/favicon.png")'>
-    <script type="text/javascript" src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script type='text/javascript' src='@routes.Assets.at("lib/jquery/jquery.min.js")'></script>
+    <script type='text/javascript' src='@routes.Assets.at("lib/flot/jquery.flot.js")'></script>
     <script type='text/javascript' src='@routes.Assets.at("javascripts/index.js")'></script>
 </head>
 <body data-ws-url="@routes.Application.ws.webSocketURL()">
-    <button onclick="document.ws.send(JSON.stringify('Button pressed!')); alert('Ok');">Press Me!</button>
+
+<div id="charts" class="container">
+
+</div>
 </body>
 </html>
